tests/snapshots/run_wpt_conformance__trtx_reduceLogSumExp_float32_0D_tensor_empty_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "reduce_log_sum_exp.https.any.js",
    "reduceLogSumExp float32 0D tensor empty axes",
    "trtx",
    Failed {
        msg: Some(
            "Failed to write tensor: DriverError(CUDA_ERROR_INVALID_VALUE, \"invalid argument\")",
        ),
    },
)
